cleanup and activites desc

--- a/index.html
+++ b/index.html
@@ -1079,55 +1079,51 @@
           id: "surprise",
           title: "Let me decide",
           desc: "i'm pretty creative :)",
-          img: "Images/SchedulingAssistant/activity-surprise.png",
         },
         {
           id: "christkindly",
           title: "Christkindlmarkt",
           desc: "Glühi",
-          img: "Images/SchedulingAssistant/activity-iceskating.png",
         },
         {
           id: "indoor",
           title: "Random Indoor Activities",
           desc: "I'll organize somethinnn",
-          img: "Images/SchedulingAssistant/activity-iceskating.png",
         },
         {
           id: "hiking",
           title: "Hiking!!!",
           desc: "HIKINGGGGG",
-          img: "Images/SchedulingAssistant/activity-hiking.png",
         },
         {
           id: "snowboarding",
           title: "Snowboarding/Skiing/Rodeln",
           desc: "Lots of patience from your side required!",
-          img: "Images/SchedulingAssistant/activity-snowboarding.png",
+        },
+        {
+          id: "restarant",
+          title: "Crazy Fooood/Restaurant",
+          desc: "I'd pay because im scared of you lol",
         },
         {
           id: "iceskating",
           title: "IceSkating",
-          desc: "Last time I did this I was 6.",
-          img: "Images/SchedulingAssistant/activity-iceskating.png",
+          desc: "Last time I did it I was 6.",
         },
         {
           id: "dancing",
           title: "[Don't pick this #1] Dancing",
-          desc: "Its out out out of my comfort zone, but actually would like to learn, paradox :[",
-          img: "Images/SchedulingAssistant/activity-dancing.png",
+          desc: "Its OUT OUT OUT of my comfort zone, but actually would rly like to learn, paradox :[",
         },
         {
           id: "marathon",
           title: "[Don't pick this #2] Marathon",
           desc: "You're insane if you pick this.",
-          img: "Images/SchedulingAssistant/activity-marathon.png",
         },
         {
           id: "game",
           title: "[Don't pick this #3] My favourite hobby",
-          desc: "its too intense even for you, tough lady ;)",
-          img: "Images/SchedulingAssistant/activity-game.png",
+          desc: "i've never shared it on insta, but its too intense even for you, tough lady ;)",
         },
       ];
 
