--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>Isabelle Scheduling Assistant — Updated</title>
+    <title>Isabelle Scheduling Assistant</title>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta property="og:description" content="you need it lol" />
     <style>
       :root {
         --bg: #ffffff;
